updated my files

--- a/CODE/dashboard.html
+++ b/CODE/dashboard.html
@@ -29,17 +29,17 @@
                 <thead>
                     <tr>
                         <th>id</th>
-                        <th >Task_name</th>
-                        <th >File_path</th>
-                        <th >Last_run</th>
-                        <th >Last_output</th>
-                        <th >Is_enabled</th>
-                        <th >Interval_Minutes</th>
-                        <th >Next_run</th>
-                        <th >Description</th>
-                        <th >Type</th>
-                        <th >Created_at</th>
-                        <th >Updated_at</th>
+                        <th >task_name</th>
+                        <th >file_path</th>
+                        <th >last_run</th>
+                        <th >last_output</th>
+                        <th >is_enabled</th>
+                        <th >interval_Minutes</th>
+                        <th >next_run</th>
+                        <th >description</th>
+                        <th >type</th>
+                        <th >created_at</th>
+                        <th >updated_at</th>
                     </tr>
                 </thead>
 
