--- a/CODE/index.html
+++ b/CODE/index.html
@@ -22,7 +22,7 @@
             </span>
            
             <div class="login">
-                <form action="login.php" class="form" id="form" method="POST">
+                <form action="login.php" class="form" id="form" method="post">
                     
                     <div class="class">
                         <p class="p">Username</p>
@@ -47,15 +47,3 @@
 <script src="JQ.js" type="text/javascript"></script>
 </html>
 
-<!-- session, post request,local storage, to be discussed -->
-               <!-- $.ajax({
-                url
-                type
-                data{
-                    action: 'login'
-
-                }
-                datatype:+
-                sucesss:
-                err
-               }) -->
